<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="io.handpay.app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_payments"
        android:name="io.handpay.app.ui.payments.PaymentsFragment"
        android:label="@string/title_payments"
        tools:layout="@layout/fragment_payments" />

    <fragment
        android:id="@+id/navigation_invoices"
        android:name="io.handpay.app.ui.invoices.InvoicesFragment"
        android:label="@string/title_invoices"
        tools:layout="@layout/fragment_invoices" />

    <fragment
        android:id="@+id/navigation_loyalty"
        android:name="io.handpay.app.ui.loyalty.LoyaltyFragment"
        android:label="@string/title_loyalty"
        tools:layout="@layout/fragment_loyalty" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="io.handpay.app.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>